# polars-fuzzy-match

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  release.yml
examples/: usage.py
polars_fuzzy_match/: __init__.py  util.py
src/: fuzzy_match.rs  lib.rs
