[package]
name = "polars_fuzzy_match"
version = "0.1.5"
edition = "2021"

[lib]
name = "polars_fuzzy_match"
crate-type = ["cdylib"]

[dependencies]
nucleo = "0.4.0"
nucleo-matcher = "0.3.1"
polars = { version = "*" }
pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
