[project]
name = "polars-fuzzy-match"
description = "Polars extension for fzf-style fuzzy matching "
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"

[project.urls]
"Repository" = "https://github.com/bnm3k/polars-fuzzy-match"
"Documentation" = "https://github.com/bnm3k/polars-fuzzy-match/blob/master/README.md"
"Change Log" = "https://github.com/bnm3k/polars-fuzzy-match/releases"
"Issue Tracker" = "https://github.com/bnm3k/polars-fuzzy-match/issues"

[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.6"]
build-backend = "maturin"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
